# belasova

./: Belasova_Basic_Usage.md  Belasova_basics.md  Cargo.toml  README.md  ast_nodes.py  belasova_parser.py  example.sova  hello.sova  interpreter.py  math.sova  sovarun  sovarun.py  test.sova  tokenizer.py
src/: interpreter.rs  lib.rs  main.rs
src/ast/: mod.rs
src/parser/: grammar.pest  mod.rs
