[package]
name = "belasova"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "The Belasova Programming Language"

[[bin]]
name = "belasova"
path = "src/main.rs"

[[bin]]
name = "runsova"
path = "src/bin/runsova.rs"

[dependencies]
logos = "0.14"           # For lexing
pest = "2.7"            # For parsing
pest_derive = "2.7"     # For parsing
thiserror = "1.0"       # For error handling
anyhow = "1.0"          # For error handling
clap = { version = "4.4", features = ["derive"] }  # For CLI
